Не законченый хедер

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </ul>
 
             <!-- Социальные сети -->
-            <ul class="social-header">
+            <ul class="social-header__list list">
               <li class="social-header__item item">
                 <a class="social-header__link link" href="#">Instagram</a>
               </li>
