--- a/index.html
+++ b/index.html
@@ -55,12 +55,100 @@
                 </a>
               </li>
               <li class="contacts-header__item item">
-                <a class="contacts-header__link tel-header link" href="tel:+380961111111">
+                <a
+                  class="contacts-header__link tel-header link"
+                  href="tel:+380961111111"
+                >
                   <svg class="contacts-header__icon-tel icon">
                     <use href="./images/svg/sprite.svg#icon-smartphone"></use>
                   </svg>
                   +38 096 111 11 11
                 </a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Кнопка меню -->
+          <button
+            type="button"
+            class="menu-button"
+            aria-expanded="false"
+            aria-controls="menu"
+            data-menu-button
+          >
+            <svg
+              class="menu-icon icon"
+              width="25"
+              height="19"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-close"
+                href="./images/svg/sprite.svg#icon-modal-close"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/svg/sprite.svg#icon-menu-burger"
+              ></use>
+            </svg>
+          </button>
+
+          <div class="menu" id="menu" data-menu>
+            <!-- Главная навигация -->
+            <nav class="mob-nav">
+              <!-- Переход на другие страницы -->
+              <ul class="mob-nav__list list">
+                <li class="mob-nav__item item">
+                  <a
+                    class="mob-nav__link mob-nav__link--current link"
+                    href="./index.html"
+                    >Студия</a
+                  >
+                </li>
+                <li class="mob-nav__item item">
+                  <a class="mob-nav__link link" href="./portfolio.html"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="mob-nav__item item">
+                  <a class="mob-nav__link link" href="#">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+
+            <!-- Контакты хедер -->
+            <ul class="mob-contacts list">
+              <li class="mob-contacts__item item">
+                <a
+                  class="mob-contacts__link tel link"
+                  href="tel:+380961111111"
+                >
+                  +38 096 111 11 11
+                </a>
+              </li>
+              <li class="mob-contacts__item item">
+                <a
+                  class="mob-contacts__link mail link"
+                  href="mailto:info@devstudio.com"
+                >
+                  info@devstudio.com
+                </a>
+              </li>
+            </ul>
+
+            <!-- Социальные сети -->
+            <ul class="mob-social list">
+              <li class="mob-social__item item">
+                <a class="mob-social__link link" href="#">Instagram</a>
+              </li>
+              <li class="mob-social__item item">
+                <a class="mob-social__link link" href="#">Twitter</a>
+              </li>
+              <li class="mob-social__item item">
+                <a class="mob-social__link link" href="#">Facebook</a>
+              </li>
+              <li class="mob-social__item item">
+                <a class="mob-social__link link" href="#">LinkedIn</a>
               </li>
             </ul>
           </div>
@@ -578,7 +666,8 @@
       </div>
     </div>
 
-    <!-- Скрипт открытия-закрытия модального окна -->
+    <!-- Скрипты открытия-закрытия модального окна и меню -->
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
