--- a/index.html
+++ b/index.html
@@ -643,8 +643,9 @@
               value="accepted"
             />
             <span class="modal__checker"></span>
-            Соглашаюсь с рассылкой и принимаю
-            <a class="modal__link link" href="#">Условия договора</a>
+            <span>Соглашаюсь с рассылкой и принимаю
+              <a class="modal__link link" href="#">Условия договора</a>
+            </span>
           </label>
 
           <!-- Кнопка отправки формы -->
