--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
               value="accepted"
             />
             <span class="modal__checker"></span>
-            zzСоглашаюсь с рассылкой и принимаю
+            Соглашаюсь с рассылкой и принимаю
             <a class="modal__link link" href="#">Условия договора</a>
           </label>
 
