--- a/portfolio.html
+++ b/portfolio.html
@@ -651,7 +651,7 @@
                       type="image/webp"
                     />
                     <img
-                      class="portfolio-item__photo"
+                      class="thumb__photo"
                       src="./images/tablet/portfolio/progect-8.jpg"
                       alt="Постер проекта ЛАБ"
                       width="354px"
